tests/suite/snapshots/suite__check__tests__check__bad_procedure_return.xi.snap
---
source: tests/suite/check.rs
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_procedure_return.xi:3:12]
   │
 3 │     return foo()
   ·            ──┬──  
   ·              ╰──── Not a single expression type
───╯

